Closed
Bug 1342363
Opened 9 years ago
Closed 9 years ago
Update cubeb from upstream to 25b593f
Categories
(Core :: Audio/Video: cubeb, defect, P1)
Core
Audio/Video: cubeb
Tracking
()
RESOLVED
FIXED
mozilla54
People
(Reporter: achronop, Assigned: achronop)
References
Details
Attachments
(3 files, 1 obsolete file)
|
59 bytes,
text/x-review-board-request
|
padenot
:
review+
|
Details |
|
11.36 KB,
patch
|
kinetik
:
review+
lizzard
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
|
8.76 KB,
patch
|
kinetik
:
review+
jcristau
:
approval-mozilla-release-
jcristau
:
approval-mozilla-esr52+
|
Details | Diff | Splinter Review |
Update cubeb from upstream to 25b593f. Commits log from previous import:
25b593f audiounit: Address issue #240 plus minor cleanups (#241)
3381056 Update AUTHORS
52c6093 audiounit: prevent deadlock by avoiding creating AU when getting channel layout
91c40d3 wasapi: fix two crashes (Bug 1340278, Bug 1340289)
4edf825 Allow to prebuffer more data when in debug.
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → achronop
Rank: 15
Priority: -- → P1
| Assignee | ||
Comment 1•9 years ago
|
||
| Comment hidden (mozreview-request) |
Comment 3•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8840879 [details]
Bug 1342363 - Update cubeb from upstream to 25b593f.
https://reviewboard.mozilla.org/r/115308/#review116772
Attachment #8840879 -
Flags: review?(padenot) → review+
Pushed by achronop@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/0026ce0ef66c
Update cubeb from upstream to 25b593f. r=padenot
Comment 5•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox54:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Comment 6•9 years ago
|
||
For regression bug 1340278, bug 1340289, could you please create uplift requests here so that we can incorporate the fixes into 52 beta for verification? Thanks.
Flags: needinfo?(achronop)
| Assignee | ||
Comment 7•9 years ago
|
||
| Assignee | ||
Comment 8•9 years ago
|
||
Approval Request Comment
[Feature/Bug causing the regression]:
None
[User impact if declined]:
Around 0.2% of browser crashes on 52.0b6
[Is this code covered by automated tests?]: yes
[Has the fix been verified in Nightly?]: yes
[Needs manual test from QE? If yes, steps to reproduce]: No
[List of other uplifts needed for the feature/fix]: none
[Is the change risky?]: no
[Why is the change risky/not risky?]:
Small fix already in Nightly.
[String changes made/needed]: none
Attachment #8841515 -
Flags: review?(kinetik)
Attachment #8841515 -
Flags: approval-mozilla-aurora?
| Assignee | ||
Comment 9•9 years ago
|
||
Approval Request Comment
[Feature/Bug causing the regression]:
None
[User impact if declined]:
Around 0.2% of browser crashes on 52.0b6
[Is this code covered by automated tests?]: yes
[Has the fix been verified in Nightly?]: yes
[Needs manual test from QE? If yes, steps to reproduce]: No
[List of other uplifts needed for the feature/fix]: none
[Is the change risky?]: no
[Why is the change risky/not risky?]:
Small fix already in Nightly.
[String changes made/needed]: none
Attachment #8841515 -
Attachment is obsolete: true
Attachment #8841515 -
Flags: review?(kinetik)
Attachment #8841515 -
Flags: approval-mozilla-aurora?
Attachment #8841517 -
Flags: review?(kinetik)
Attachment #8841517 -
Flags: approval-mozilla-aurora?
Updated•9 years ago
|
Attachment #8841517 -
Flags: review?(kinetik) → review+
Updated•9 years ago
|
status-firefox51:
--- → wontfix
status-firefox52:
--- → affected
status-firefox53:
--- → affected
status-firefox-esr45:
--- → unaffected
status-firefox-esr52:
--- → affected
Comment 10•9 years ago
|
||
Comment on attachment 8841517 [details] [diff] [review]
Bug 1342363 - Uplift wasapi fixes in Aurora. r?kinetik
Update for cubeb, let's uplift to aurora to see if it helps fix some crashes.
Attachment #8841517 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 11•9 years ago
|
||
| bugherder uplift | ||
Comment 12•9 years ago
|
||
Alex, it seems we still need an uplift request for *beta 52*. Could you help ?
| Assignee | ||
Comment 13•9 years ago
|
||
Sure, however please note bug 1337641 is not completed fixed by this one so uplift will not help there. In addition patch does not apply cleanly in 52, I have to check what's the different.
| Assignee | ||
Comment 14•9 years ago
|
||
| Assignee | ||
Comment 15•9 years ago
|
||
Approval Request Comment
[Feature/Bug causing the regression]:
None
[User impact if declined]:
Around 0.2% of browser crashes on 52.0b6
[Is this code covered by automated tests?]: yes
[Has the fix been verified in Nightly?]: yes
[Needs manual test from QE? If yes, steps to reproduce]: No
[List of other uplifts needed for the feature/fix]: none
[Is the change risky?]: no
[Why is the change risky/not risky?]:
Small fix already in Nightly.
[String changes made/needed]: none
Flags: needinfo?(achronop)
Attachment #8842895 -
Flags: review?(kinetik)
Attachment #8842895 -
Flags: approval-mozilla-beta?
Updated•9 years ago
|
Attachment #8842895 -
Flags: review?(kinetik) → review+
Comment 16•9 years ago
|
||
It's too late for the 52 release. Should we consider this as a ride along candidate in a possible dot release, or for inclusion in esr52?
| Assignee | ||
Comment 17•9 years ago
|
||
It would be good to consider it for ride along candidate and for inclusion in esr52.
Comment 18•9 years ago
|
||
Comment on attachment 8842895 [details] [diff] [review]
Bug 1342363 - Uplift wasapi fixes to Beta. r?kinetik
See comment 15.
Attachment #8842895 -
Flags: approval-mozilla-release?
Attachment #8842895 -
Flags: approval-mozilla-esr52?
Attachment #8842895 -
Flags: approval-mozilla-beta?
Comment 19•9 years ago
|
||
We need a couple more one liners that fix one or two more crashes. I'm landing those in nightly soon, and I'll look at crash stats to see if it worked.
Comment 20•9 years ago
|
||
Doesn't apply to release:
grafting 382424:0026ce0ef66c "Bug 1342363 - Update cubeb from upstream to 25b593f. r=padenot"
merging media/libcubeb/README_MOZILLA
merging media/libcubeb/src/cubeb_audiounit.cpp
merging media/libcubeb/src/cubeb_wasapi.cpp
warning: conflicts while merging media/libcubeb/README_MOZILLA! (edit, then use 'hg resolve --mark')
warning: conflicts while merging media/libcubeb/src/cubeb_audiounit.cpp! (edit, then use 'hg resolve --mark')
warning: conflicts while merging media/libcubeb/src/cubeb_wasapi.cpp! (edit, then use 'hg resolve --mark')
abort: unresolved conflicts, can't continue
(use 'hg resolve' and 'hg graft --continue')
Flags: needinfo?(achronop)
| Assignee | ||
Comment 21•9 years ago
|
||
For release you need to apply patch from comment 15, attached file: "Bug 1342363 - Uplift wasapi fixes to Beta. r?kinetik". From the output of the failure I believe you apply the inbound patch.
Flags: needinfo?(achronop) → needinfo?(sledru)
Comment 22•9 years ago
|
||
Comment on attachment 8842895 [details] [diff] [review]
Bug 1342363 - Uplift wasapi fixes to Beta. r?kinetik
I'd rather leave this to 53.
Attachment #8842895 -
Flags: approval-mozilla-release? → approval-mozilla-release-
Comment 23•9 years ago
|
||
(In reply to Alex Chronopoulos [:achronop] from comment #21)
> For release you need to apply patch from comment 15, attached file: "Bug
> 1342363 - Uplift wasapi fixes to Beta. r?kinetik". From the output of the
> failure I believe you apply the inbound patch.
Yep, that's very likely what happened (I think Sylvestre was testing an automated tool that grafts changes from m-c to test uplifts).
Flags: needinfo?(sledru)
Comment 24•9 years ago
|
||
Comment on attachment 8842895 [details] [diff] [review]
Bug 1342363 - Uplift wasapi fixes to Beta. r?kinetik
cubeb fix for esr52
Attachment #8842895 -
Flags: approval-mozilla-esr52? → approval-mozilla-esr52+
Comment 25•9 years ago
|
||
| bugherder uplift | ||
Updated•9 years ago
|
Comment 26•9 years ago
|
||
Setting qe-verify- based on Alex's assessment on manual testing needs (see Comment 15) and the fact that this fix has automated coverage.
Flags: qe-verify-
You need to log in
before you can comment on or make changes to this bug.
Description
•