Bug 1342363 - Uplift wasapi fixes to Firefox 53. r=kinetik, a=lizzard